<resources>
    <string name="app_name">AppTest</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="placeholder">Hello!</string>
    <string name="text_formatted">Question: %d/%d</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="score_view">score : </string>
    <string name="score_result">0</string>
    <string name="highest_view">Highest score : </string>
    <string name="highest_score">0</string>
</resources>